<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button_new_entry"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.33"
        android:text="@string/button_new_entry"
        android:onClick="newEntry" />

    <Button
        android:id="@+id/button_view_log"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.33"
        android:text="@string/button_view_entries"
        android:onClick="viewLog" />
    
    <Button
        android:id="@+id/button_edit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.33"
        android:text="@string/button_edit_entries"
        android:onClick="deleteMode" />

    <Button
        android:id="@+id/button_about"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.33"
        android:text="@string/button_about"
        android:onClick="aboutMessage" />

</LinearLayout>
